# zkwasm-exchange

./: .env  .gitignore  Cargo.toml  Dockerfile.ci  Dockerfile.merkle  Makefile  README.md
.github/workflows/: ci-cd.yml  merkle-service.yml
build-artifacts/application/: application_bg.wasm
helm-charts/zkwasm-automata/: Chart.yaml  values.yaml
helm-charts/zkwasm-automata/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  merkle-deployment.yaml  merkle-service.yaml  mongodb-deployment.yaml  mongodb-pvc.yaml  mongodb-service.yaml  redis-deployment.yaml
helm-charts/zkwasm-echange/: .helmignore  Chart.yaml  values.yaml
helm-charts/zkwasm-echange/templates/: deployment.yaml  ingress.yaml  merkle-deployment.yaml  merkle-pvc.yaml  mongodb-deployment.yaml  redis-service.yaml  service.yaml
helm-charts/zkwasm-exchange/: Chart.yaml  values.yaml
helm-charts/zkwasm-exchange/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  merkle-deployment.yaml  merkle-pvc.yaml  merkle-service.yaml  mongodb-pvc.yaml  mongodb-service.yaml  redis-deployment.yaml  service.yaml
scripts/: generate-helm.sh
src/: admin.pubkey  config.rs  event.rs  lib.rs  player.rs  settlement.rs  state.rs  transaction.rs
ts/: .npmrc  package-lock.json  package.json  publish.sh  tsconfig.json  update.sh
ts/src/: Proxy.json  api.ts  commits.ts  debug.ts  deposit.ts  js.ts  mongo_test.ts  place.ts  placeorder.ts  query.ts  service.ts  test.ts  test_matcher.ts  test_withdraw.ts  to_hex.ts  u8_to_hex.ts
ts/src/info/: event.ts  info.ts
ts/src/matcher/: matcher.ts  matcher_test.ts
(+2 files in other folders)
