[package]
name = "zkwasm-autocombat-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_settlement_test"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
test = []
protocol = []

[dependencies]
primitive-types = {version="0.12.1", default-features = false}
lazy_static = "1.4.0"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", default-features = true }
wasm-bindgen = "0.2.91"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
zkwasm-rest-abi = { git = "https://github.com/DelphinusLab/zkwasm-typescript-mini-server" }
